--- a/configuration.yaml
+++ b/configuration.yaml
@@ -110,7 +110,8 @@ light:
       - light.corner_lamp
 
 recorder:
-  purge_keep_days: 3
+  db_url: mysql://root:pi@127.0.0.1:3306/homeassistant?charset=utf8
+  purge_keep_days: 7
   commit_interval: 60
   exclude:
     domains:
