--- a/configuration.yaml
+++ b/configuration.yaml
@@ -114,19 +114,31 @@ recorder:
   purge_keep_days: 7
   commit_interval: 60
   exclude:
+    entities:
+      - sensor.time
+      - sensor.date
+      - sensor.date_time
+      - sensor.hacs
+      - sensor.travel_time_to_work
+      - sensor.days_since_last_cleanup
     domains:
       - updater
-      - sensor
       - sun
       - media_player
       - automation
       - script
       - lock
       - zwave
-      - input_*
       - group
       - device_tracker
       - binary_sensor
+    entity_globs:
+      - sensor*Battery*
+      - input_*
+      - sensor.archer*
+      - sensor.fibaro*
+      - sensor.vacuum*
+      - sensor.sm_*
 
 binary_sensor:
   - platform: school
