--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ secrets.yaml
 *.xml
 *.db
 *.sqlite
-.storage/
-.vscode/
+.storage/hacs*
+.storage/core.restore_state
+.storage/mobile_app
+.storage/auth
 .sonoff.json
 tts/
 custom_components/hacs/
@@ -16,3 +18,4 @@ known_devices.yaml
 *__pycache*
 .gitsecret/keys/random_seed
 !*.secret
+.storage/core.config
