--- a/customize.yaml
+++ b/customize.yaml
@@ -4,14 +4,6 @@ switch.sonoff_ch1:
   friendly_name: Main lamp
 sensor.hue_motion_sensor_1_temperature:
   icon: mdi:thermometer
-zwave.fibaro_system_fgsd002_smoke_sensor:
-  friendly_name: FIBARO Smoke Sensor
-sensor.fibaro_system_fgsd002_smoke_sensor_alarm_level:
-  friendly_name: FIBARO Smoke Sensor Alarm Level
-sensor.fibaro_system_fgsd002_smoke_sensor_battery_level:
-  friendly_name: FIBARO Smoke Sensor Battery Level
-sensor.fibaro_system_fgsd002_smoke_sensor_temperature:
-  friendly_name: FIBARO Smoke Sensor Temperature
 light.dimmable_light_2:
   friendly_name: WC lamp
 light.extended_color_light_3:
@@ -20,3 +12,33 @@ light.configuration_tool_1:
   friendly_name: ConBee-II
 sensor.waqi_pha10_prumyslova_prague_czech_republic:
   friendly_name: WAQI Prague
+zwave.fibaro_system_fgsd002_smoke_sensor:
+  friendly_name: Smoke Sensor
+sensor.fibaro_system_fgsd002_smoke_sensor_alarm_level:
+  friendly_name: Smoke Alarm Level
+sensor.fibaro_system_fgsd002_smoke_sensor_battery_level:
+  friendly_name: Smoke Sensor Battery Level
+sensor.fibaro_system_fgsd002_smoke_sensor_temperature:
+  friendly_name: Smoke Sensor Temperature
+sensor.fibaro_system_fgsd002_smoke_sensor_alarm_type:
+  friendly_name: Smoke Alarm Type
+sensor.fibaro_system_fgsd002_smoke_sensor_burglar:
+  friendly_name: Smoke Sensor Burglar
+sensor.fibaro_system_fgsd002_smoke_sensor_general:
+  friendly_name: Smoke General
+sensor.fibaro_system_fgsd002_smoke_sensor_heat:
+  friendly_name: Smoke Heat
+sensor.fibaro_system_fgsd002_smoke_sensor_heat_2:
+  friendly_name: Smoke Heat 2
+sensor.fibaro_system_fgsd002_smoke_sensor_system:
+  friendly_name: Smoke System
+sensor.fibaro_system_fgsd002_smoke_sensor_sourcenodeid:
+  friendly_name: Smoke SourceNodeId
+sensor.fibaro_system_fgsd002_smoke_sensor_smoke:
+  friendly_name: Smoke Smoke
+sensor.fibaro_system_fgsd002_smoke_sensor_smoke_2:
+  friendly_name: Smoke Smoke 2
+sensor.fibaro_system_fgsd002_smoke_sensor_power_management:
+  friendly_name: Smoke Power Management
+binary_sensor.fibaro_system_fgsd002_smoke_sensor_sensor:
+  friendly_name: Smoke Sensor
