--- a/customize.yaml
+++ b/customize.yaml
@@ -12,33 +12,9 @@ light.configuration_tool_1:
   friendly_name: ConBee-II
 sensor.waqi_pha10_prumyslova_prague_czech_republic:
   friendly_name: WAQI Prague
-zwave.fibaro_system_fgsd002_smoke_sensor:
-  friendly_name: Smoke Sensor
-sensor.fibaro_system_fgsd002_smoke_sensor_alarm_level:
-  friendly_name: Smoke Alarm Level
-sensor.fibaro_system_fgsd002_smoke_sensor_battery_level:
+binary_sensor.fgsd002_smoke_sensor_smoke_alarm_smoke_detected:
+  friendly_name: Smoke Alarm
+sensor.fgsd002_smoke_sensor_battery_level:
   friendly_name: Smoke Sensor Battery Level
-sensor.fibaro_system_fgsd002_smoke_sensor_temperature:
+sensor.fgsd002_smoke_sensor_air_temperature:
   friendly_name: Smoke Sensor Temperature
-sensor.fibaro_system_fgsd002_smoke_sensor_alarm_type:
-  friendly_name: Smoke Alarm Type
-sensor.fibaro_system_fgsd002_smoke_sensor_burglar:
-  friendly_name: Smoke Sensor Burglar
-sensor.fibaro_system_fgsd002_smoke_sensor_general:
-  friendly_name: Smoke General
-sensor.fibaro_system_fgsd002_smoke_sensor_heat:
-  friendly_name: Smoke Heat
-sensor.fibaro_system_fgsd002_smoke_sensor_heat_2:
-  friendly_name: Smoke Heat 2
-sensor.fibaro_system_fgsd002_smoke_sensor_system:
-  friendly_name: Smoke System
-sensor.fibaro_system_fgsd002_smoke_sensor_sourcenodeid:
-  friendly_name: Smoke SourceNodeId
-sensor.fibaro_system_fgsd002_smoke_sensor_smoke:
-  friendly_name: Smoke Smoke
-sensor.fibaro_system_fgsd002_smoke_sensor_smoke_2:
-  friendly_name: Smoke Smoke 2
-sensor.fibaro_system_fgsd002_smoke_sensor_power_management:
-  friendly_name: Smoke Power Management
-binary_sensor.fibaro_system_fgsd002_smoke_sensor_sensor:
-  friendly_name: Smoke Sensor
