--- a/sensor.yaml
+++ b/sensor.yaml
@@ -134,3 +134,12 @@
   beta: true
 - platform: version
   name: current_version_homeassistant
+#OctoPrint
+- platform: template
+  sensors:
+    octoprint_time_elapsed:
+      friendly_name: 'Printing Time Elapsed'
+      value_template: "{{ states('sensor.ender3_v2_time_elapsed') | int | timestamp_custom('%H:%M:%S', 0) }}"
+    octoprint_time_remaining:
+      friendly_name: 'Printing Time Remaining'
+      value_template: "{{ states('sensor.ender3_v2_time_remaining') | int | timestamp_custom('%H:%M:%S', 0) }}"
