--- a/automations.yaml
+++ b/automations.yaml
@@ -425,6 +425,16 @@
         service: light.turn_on
     - conditions:
       - condition: template
+        value_template: '{{ trigger.event.data.event == 2002 and is_state("light.corner_lamp",
+          "off") }}'
+      sequence:
+      - data:
+          transition: '1'
+          brightness_pct: 100
+        entity_id: light.corner_lamp
+        service: light.turn_on
+    - conditions:
+      - condition: template
         value_template: '{{ trigger.event.data.event == 3002 and is_state("light.corner_lamp",
           "on") }}'
       sequence:
@@ -434,6 +444,16 @@
             \ 'brightness') / 2.55) | int | round(0) %} {% set new_brightness = brightness_pct\
             \ - 25 %} {% if new_brightness > 1 %}\n  {{ new_brightness }}\n{% else\
             \ %}\n  1\n{% endif %}\n"
+        entity_id: light.corner_lamp
+        service: light.turn_on
+    - conditions:
+      - condition: template
+        value_template: '{{ trigger.event.data.event == 3002 and is_state("light.corner_lamp",
+          "off") }}'
+      sequence:
+      - data:
+          transition: '1'
+          brightness_pct: 1
         entity_id: light.corner_lamp
         service: light.turn_on
     - conditions:
