--- a/sensor.yaml
+++ b/sensor.yaml
@@ -76,8 +76,8 @@
       value_template: "Sensor: {{ states.vacuum.xiaomi_vacuum_cleaner.attributes.sensor_dirty_left }}"
       icon_template: "mdi:screwdriver"
 - platform: waze_travel_time
-  origin: 50.08286520, 14.56114710
-  destination: 50.04702660, 14.30680500
+  origin: !secret waze_origin
+  destination: !secret waze_origin
   region: 'EU'
   name: "Travel time to work"
 - platform: waqi
